# senseglove_ros_ws

./: .gitignore  .gitlab-ci.yml  README.md  compile_commands.json  merge_compile_commands.sh  senseglove_ros_ws.code-workspace
Dockerfiles/: build-image.sh  run-container.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  (+1 more)
src/hardware_interface/senseglove_hardware/: CMakeLists.txt  package.xml
src/hardware_interface/senseglove_hardware/SenseCom/: LICENSE  README.md  README.md.bak
src/hardware_interface/senseglove_hardware/SenseCom-1.3.0/Android/: README.md  README.md.bak
src/hardware_interface/senseglove_hardware/SenseCom-1.3.0/Linux/SenseCom_Linux_Latest/SenseCom_Data/: globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  level3  level4  resources.assets  sharedassets1.assets
src/hardware_interface/senseglove_hardware/SenseCom-1.3.0/Win/: README.md.bak
src/hardware_interface/senseglove_hardware/SenseCom-1.3.0/Win/SenseCom_Win_Latest/SenseCom_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level3  sharedassets2.assets  sharedassets3.assets.resS  sharedassets4.assets
src/hardware_interface/senseglove_hardware/SenseCom-1.3.1/Linux/SenseCom_Linux_Latest/SenseCom_Data/: globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  level3  level4  sharedassets2.assets  sharedassets4.assets
src/hardware_interface/senseglove_hardware/SenseCom-1.3.1/Win/: README.md
src/hardware_interface/senseglove_hardware/SenseCom-1.3.1/Win/SenseCom_Win_Latest/SenseCom_Data/: app.info  level0  level1  level2  level4  resources.assets  resources.assets.resS  sharedassets1.assets
src/hardware_interface/senseglove_hardware/SenseCom/Linux/: README.md  README.md.bak  sessionLog.txt
src/hardware_interface/senseglove_hardware/SenseCom/Linux/SenseCom_Latest/SenseCom_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  level3  level4  resources.assets  sharedassets0.assets.resS  sharedassets1.assets  sharedassets2.assets  sharedassets3.assets.resS  sharedassets4.assets
src/hardware_interface/senseglove_hardware/SenseCom/Linux/SenseCom_Latest/SenseCom_Data/Resources/: unity_builtin_extra
src/hardware_interface/senseglove_hardware/cmake/: senseglove_hardware-extras.cmake
src/hardware_interface/senseglove_hardware/include/senseglove_hardware/: actuation_mode.h  joint.h  senseglove_robot.h  senseglove_setup.h
src/hardware_interface/senseglove_hardware/include/senseglove_hardware/communication/: sense_com.h
src/hardware_interface/senseglove_hardware/src/: joint.cpp  senseglove_robot.cpp  senseglove_setup.cpp
src/hardware_interface/senseglove_hardware/src/communication/: sense_com.cpp
src/hardware_interface/senseglove_hardware_builder/: CMakeLists.txt  package.xml
src/hardware_interface/senseglove_hardware_builder/include/senseglove_hardware_builder/: allowed_robot.h  hardware_builder.h
src/hardware_interface/senseglove_hardware_builder/robots/: dk1.yaml  dk1_left.yaml  dk1_right.yaml  fino.yaml  nova.yaml  nova_left.yaml  nova_right.yaml
src/hardware_interface/senseglove_hardware_builder/src/: hardware_builder.cpp
src/hardware_interface/senseglove_hardware_interface/: CMakeLists.txt  package.xml
src/hardware_interface/senseglove_hardware_interface/config/dk1/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/dk1_1/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/dk1_2/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/dk1_left/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/dk1_right/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/fino/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/nova/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/nova_left/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/config/nova_right/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/include/senseglove_hardware_interface/: senseglove_hardware_interface.h
src/hardware_interface/senseglove_hardware_interface/launch/: hardware.launch  startGlove.sh
src/hardware_interface/senseglove_hardware_interface/src/: senseglove_hardware_interface.cpp  senseglove_hardware_interface_node.cpp
src/senseglove/senseglove_description/: CMakeLists.txt  package.xml  urdf.rviz  urdf_both.rviz  urdf_left.rviz  urdf_right.rviz
src/senseglove/senseglove_description/urdf/: dk1.xacro  dk1_left.xacro  dk1_right.xacro  nova.xacro  nova_left.xacro  nova_right.xacro
src/senseglove/senseglove_description/urdf/STL/: MK29_DK1_HUB.STL
src/senseglove/senseglove_finger_distance/: CMakeLists.txt  package.xml  setup.py
src/senseglove/senseglove_finger_distance/scripts/: senseglove_finger_distance_node  senseglove_haptics_node
src/senseglove/senseglove_finger_distance/src/senseglove_finger_distance/: Senseglove2Shadow.py  finger_distance_calibration.py  finger_distance_node.py  haptics_node.py  haptics_node_action_interface.py  simple_haptics_node.py
src/senseglove/senseglove_haptics/: CMakeLists.txt  package.xml  setup.py
src/senseglove/senseglove_haptics/scripts/: senseglove_haptics_node
src/senseglove/senseglove_launch/: CMakeLists.txt  package.xml
src/senseglove/senseglove_launch/launch/: senseglove_demo.launch  senseglove_finger_distance_demo.launch  senseglove_finger_distance_dk.launch  senseglove_finger_distance_nova.launch  senseglove_hardware_demo.launch
src/senseglove/senseglove_launch/scripts/: startGlove.sh
src/senseglove/senseglove_shared_resources/: CMakeLists.txt  package.xml
src/senseglove/senseglove_shared_resources/msg/: FingerDistanceFloats.msg  FingerDistanceFloatsCalibrated.msg  FingerDistances.msg  FingerTipPositions.msg  SenseGloveFeedback.msg  SenseGloveState.msg  SenseGloveTipPositions.msg  senseglove.msg
src/senseglove/senseglove_shared_resources/srv/: Calibrate.srv
(+400 files in other folders)
