<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senseglove_hardware</name>
  <version>0.0.0</version>
  <description>
    Communicates with the senseglove hardware.
  </description>

  <maintainer email="rogierkrijnen@live.nl">SenseGlove</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>urdf</depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rosunit</test_depend>
</package>
