<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senseglove_hardware_interface</name>
  <version>0.0.0</version>
  <description>
    The bridge between ros_control and the senseglove hardware.
  </description>

  <maintainer email="rogierkrijnen@live.nl">SenseGlove</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>senseglove_description</depend>
  <depend>senseglove_hardware</depend>
  <depend>senseglove_hardware_builder</depend>
  <depend>senseglove_shared_resources</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
