<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>senseglove_finger_distance</name>
    <version>0.0.0</version>
    <description>A feature package that implements gain scheduling control.</description>

    <maintainer email="rogierkrijnen@live.nl">SenseGlove</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>python3-setuptools</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>genmsg</build_depend>

    <depend>senseglove_shared_resources</depend>
    <depend>std_msgs</depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>

    <test_depend>rosunit</test_depend>
</package>

