<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>senseglove_haptics</name>
    <version>0.0.0</version>
    <description>A package providing methods of haptic feedback </description>

    <maintainer email="akshay@senseglove.com">SenseGlove</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>python3-setuptools</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>genmsg</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>trajectory_msgs</build_depend>

    <depend>senseglove_shared_resources</depend>
    <depend>std_msgs</depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>

    <test_depend>rosunit</test_depend>
</package>

