<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senseglove_launch</name>
  <version>0.0.0</version>
  <description>
    provides a clear directory from which one can launch the senseglove.
  </description>

  <maintainer email="rogierkrijnen@live.nl">SenseGlove</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>senseglove_description</exec_depend>
  <exec_depend>senseglove_finger_distance</exec_depend>
  <exec_depend>senseglove_hardware</exec_depend>
  <exec_depend>senseglove_hardware_interface</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
